# compteurPersonneByIA

./: README.md
ESP32_code/: log_esp32.csv  log_esp32.txt  log_esp32_test.csv  platformio.ini  tee
ESP32_code/ESP32_code/src/: capteur_utils.cpp
ESP32_code/include/: capteur_utils.h  network_utils.h
ESP32_code/src/: capteur_utils.cpp  main.cpp  network_utils.cpp
backend/: DataTest.sql  requirements.txt  requirements_win.txt  scriptDb.sql  sortie_inserts.sql
backend/app/: database.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  events.py
backend/app/core/: security.py
backend/app/crud/: events.py
backend/app/models/: events.py  users.py
backend/app/schemas/: events.py  users.py
esp32Code_with_espidf/: CMakeLists.txt
esp32Code_with_espidf/main/: main.c
esp32_idf_code/: CMakeLists.txt
esp32_idf_code/components/capteurs/: CMakeLists.txt  capteurs_utils.c  capteurs_utils.h
esp32_idf_code/components/ei_model/: CMakeLists.txt  README.txt
esp32_idf_code/components/ei_model/model-parameters/: model_metadata.h  model_variables.h
esp32_idf_code/components/ei_model/tflite-model/: tflite_learn_818072_11_compiled.cpp  tflite_learn_818072_11_compiled.h  tflite_learn_818072_5_compiled.cpp  tflite_learn_818072_5_compiled.h
esp32_idf_code/components/network_utils/: CMakeLists.txt  network_utils.c  network_utils.h
esp32_idf_code/main/: CMakeLists.txt  main.c  main.cpp
frontend/: Dashboard.jsx  package-lock.json  package.json
frontend/src/: App.jsx  Dashboard.jsx  Login.jsx  SignUp.jsx
frontend/src/api/: auth.js  axiosConfig.js  events.js
frontend/src/components/: MyCard.jsx  MyGraph.jsx  MyLed.jsx  MyProgressBar.jsx  NbrPeopleLive.jsx  PrivateRoute.jsx
frontend/src/data/: db_statique.js
frontend/src/utils/hooks/: AuthProvider.jsx
